# FileTextSeeker

./: Cargo.toml  README.md  build.rs  fix.ps1  resource.rc
src/: main.rs  merged_app.rs
src/code_merger/: mod.rs
src/doc_searcher/: app.rs  indexer.rs  mod.rs
src/file_lister_gui/: mod.rs
src/file_seeker/: autostart.rs  config.rs  lib.rs  mod.rs  tray_helper.rs  types.rs
src/file_seeker/cli/: mod.rs
src/file_seeker/engine/: database.rs  indexer.rs  mod.rs  searcher.rs  sorter.rs
src/file_seeker/etp/: mod.rs
src/file_seeker/file_list/: mod.rs
src/file_seeker/ftp/: mod.rs
src/file_seeker/gui/: app.rs  mod.rs  options_panel.rs  results_panel.rs  search_panel.rs
src/file_seeker/history/: mod.rs
src/file_seeker/http_server/: mod.rs
src/file_seeker/rename/: mod.rs
src/file_seeker/sdk/: mod.rs
src/file_seeker/tray/: mod.rs
src/file_seeker/watcher/: mod.rs
