[package]
name = "super-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
regex = "1"
notify = "6"
walkdir = "2"
crossbeam = "0.8"
csv = "1"
rust_xlsxwriter = "0.77"
rfd = "0.14"
glob = "0.3"
jwalk = "0.8"
tiny_http = "0.12"
bzip2 = "0.4"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
url = "2"
ini = "1"
ico = "0.3"
winapi = { version = "0.3", features = ["shellapi", "winuser", "libloaderapi"] }
winreg = "0.52"
embed-resource = "2"
rand = "0.8"
crossbeam-channel = "0.5"
once_cell = "1"
rayon = "1"
notify-debouncer-full = "0.3"
calamine = "0.26"
tantivy = "0.22"
jieba-rs = "0.7"
md5 = "0.7"
bincode = "1.3"
sled = "0.34"
pdf-extract = "0.7"
docx-rs = "0.4"
quick-xml = "0.36"
zip = "0.6"
dirs = "5"
open = "5"

[build-dependencies]
embed-resource = "2"

[[bin]]
name = "super-searcher"
path = "src/main.rs"

[[bin]]
name = "tray-helper"
path = "src/file_seeker/tray_helper.rs"